--- a/.github/workflows/build-istoreos.yml
+++ b/.github/workflows/build-istoreos.yml
@@ -9,7 +9,7 @@ on:
         required: false
         default: 'false'
   schedule:
-   - cron: 0 16 5/15/25 * *
+   - cron: 0 16 5,15,25 * *
 
 env:
   REPO_URL: https://github.com/istoreos/istoreos
