--- a/.github/workflows/build-istoreos.yml
+++ b/.github/workflows/build-istoreos.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   build:
-    # runs-on: ${{ matrix.os }}
+   runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         REPO_BRANCH:
