--- a/.github/workflows/build-istoreos.yml
+++ b/.github/workflows/build-istoreos.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   build:
-   runs-on: ${{ matrix.os }}
+   runs-on: ${{ matrix }}
     strategy:
       matrix:
         REPO_BRANCH:
@@ -37,9 +37,7 @@ jobs:
          - rk35xx
         include:
           - REPO_BRANCH: istoreos-23.05
-            ARCHITECTURE: x86-alpha
-            os: ubuntu-22.04
-
+          
       fail-fast: false
 
     steps:
